# CoroutineFlow

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-format.txt
.devcontainer/: devcontainer.json
.devcontainer/dev/: Dockerfile
cmake/: clang_toolchain.cmake  coroutineFlowConfig.cmake.in  lib_config.hpp.in
documentation/: coverage.report
examples/: CMakeLists.txt
examples/stdthread/: main.cpp
examples/tag_invoke/: main.cpp
include/coroutine_flow/: profiler.hpp  tag_invoke.hpp  task.hpp
include/coroutine_flow/__details/: __continuation_coro.hpp  continuation_coro.hpp  continuation_data.hpp  coroutine_chain.hpp  scope_exit.hpp  test_injection.hpp
include/coroutine_flow/__details/testing/: execution_flow_controller.hpp  test_injection.hpp
scripts/: update-coverage-report.sh
tests/: CMakeLists.txt
tests/functional/: execution_flow_controller.cpp  tag_invoke.cpp  task_with_result.cpp
tests/include/coroutine_flow/: simple_thread_pool.hpp  test_exception.hpp
tests/include/coroutine_flow/__details/testing/: base_test_case.hpp  event.hpp  inline_scheduler.hpp  memory_check.hpp  memory_sentinel.hpp  simple_thread_pool.hpp  test_config.hpp  test_exception.hpp
tests/unit/: exception.cpp  execution.cpp  memory.cpp  return_type.cpp  tag_invoke.cpp  task_with_result.cpp
tools/: build_tracy_capture.sh
